; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/snowball/libstemmer/extr_stem_ISO_8859_1_porter.c_r_shortv.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/snowball/libstemmer/extr_stem_ISO_8859_1_porter.c_r_shortv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SN_env = type { i32 }

@g_v_WXY = common dso_local global i32 0, align 4
@g_v = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.SN_env*)* @r_shortv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @r_shortv(%struct.SN_env* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.SN_env*, align 8
  store %struct.SN_env* %0, %struct.SN_env** %3, align 8
  %4 = load %struct.SN_env*, %struct.SN_env** %3, align 8
  %5 = load i32, i32* @g_v_WXY, align 4
  %6 = call i64 @out_grouping_b(%struct.SN_env* %4, i32 %5, i32 89, i32 121, i32 0)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

9:                                                ; preds = %1
  %10 = load %struct.SN_env*, %struct.SN_env** %3, align 8
  %11 = load i32, i32* @g_v, align 4
  %12 = call i64 @in_grouping_b(%struct.SN_env* %10, i32 %11, i32 97, i32 121, i32 0)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %22

15:                                               ; preds = %9
  %16 = load %struct.SN_env*, %struct.SN_env** %3, align 8
  %17 = load i32, i32* @g_v, align 4
  %18 = call i64 @out_grouping_b(%struct.SN_env* %16, i32 %17, i32 97, i32 121, i32 0)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %22

21:                                               ; preds = %15
  store i32 1, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %20, %14, %8
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @out_grouping_b(%struct.SN_env*, i32, i32, i32, i32) #1

declare dso_local i64 @in_grouping_b(%struct.SN_env*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
